<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="30dp">

        <RelativeLayout
                android:id="@+id/relativelayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:background="@drawable/shape_header_top"
                    android:src="@color/colorMain"
                    android:scaleType="centerCrop"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="25dp"
                    android:layout_marginTop="20dp">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/header_title"
                        android:textSize="36dp"
                        android:textColor="#fff"
                        android:textStyle="bold"
                        android:fontFamily="@font/montserrat_bold"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/header_subtitle"
                        android:textSize="14sp"
                        android:textColor="#fff" android:fontFamily="@font/montserrat"/>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_recommendMenu"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textview_recommended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_recommended"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorText"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_nutritiontitle"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@android:color/black"/>

        <fragment
            android:name="id.ac.ui.cs.mobileprogramming.darinamanda.receiapp3.fragments.RandomFactsFragment"
            android:id="@+id/NutritionFactsFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp">

        </fragment>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_popular_recipe"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="14dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@android:color/black"/>

        <fragment
                android:id="@+id/nav_host_fragment"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:defaultNavHost="true"
                app:navGraph="@navigation/nav_graph" />


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_recent_recipe"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="14dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:fontFamily="@font/montserrat_bold"
            android:textColor="@android:color/black"/>

        <fragment
            android:name="id.ac.ui.cs.mobileprogramming.darinamanda.receiapp3.fragments.RecipeGridFragment"
            android:id="@+id/PhotoGalleryFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="20dp">

        </fragment>

    </LinearLayout>

</ScrollView>